--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,7 @@ button{
     display: flex;
     justify-content: flex-start;
     gap: 16px;
+    align-items: center;
 }
 .task-date{
     margin-left: auto;
