--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,8 @@ html{
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --content-color:  #ebe7ff;
     --sidebar-color: #e7e2ff;
-    --header-color: #ddd6fe;
-    --btn-color: #a78bfa
+    --header-color: #a78bfa;
+    --btn-color: #a78bfa;
 }
 body{
     display: grid;
@@ -21,6 +21,7 @@ body{
     justify-content: center;
     padding: 16px;
     background-color: var(--header-color);
+    color: white;
 }
 .logo{
     font-size: 2.5rem;
@@ -167,8 +168,23 @@ button{
 .task-date{
     margin-left: auto;
 }
-#task-description{
+.plus-icon{
+    -webkit-filter: invert(100%); /* Safari/Chrome */
+    filter: invert(100%);
+    height: 48px;
 }
-.project-btn{
-
+.btn-new-task{
+    scale: 0;
+    border-radius: 16px;
+    position: fixed;
+    bottom: 5%;
+    left: 90%;
+    
+}
+.btn-new-task.active{
+    scale: 1;
+    transition: 200ms ease-in-out;
+}
+.btn-new-task:hover{
+    scale: 0.95;
 }
